part4/4.08/manifests/production/broadcaster-dep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: broadcaster-dep
  namespace: project-namespace
spec:
  replicas: 1
  selector:
    matchLabels:
      app: broadcaster
  template:
    metadata:
      labels:
        app: broadcaster
    spec:
      containers:
      - name: broadcaster
        image: PROJECT/BROADCASTER_IMAGE
        imagePullPolicy: Always
        resources:
            requests:
              memory: "129Mi"
              cpu: "100m"
            limits:
              memory: "263Mi"
              cpu: "201m"
