part4/4.08/manifests/production/todo-app-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-app-svc
  namespace: production
spec:
  type: ClusterIP
  selector:
    app: todo-app # This is the app as declared in the deployment.
  ports:
    - name: http-todo-app
      protocol: TCP
      port: 8010
      targetPort: 8010
