part4/4.08/manifests/production/todo-backend-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-backend-svc
  namespace: production
spec:
  type: ClusterIP
  selector:
    app: todo-backend # This is the app as declared in the deployment.
  ports:
    - name: http-todo-backend
      protocol: TCP
      port: 8000 # This is a port that is available to the cluster, in this case it can be ~ anything
      targetPort: 8000  # This is the target port
